--- a/Drawing App/Storyboard/Base.lproj/Main.storyboard
+++ b/Drawing App/Storyboard/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                         <rect key="frame" x="107" y="66.5" width="200" height="40"/>
                                         <color key="backgroundColor" systemColor="systemGray5Color"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="AGp-BM-KRC"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="AGp-BM-KRC"/>
                                             <constraint firstAttribute="height" constant="40" id="wFh-gM-LtB"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="16"/>
